@@ -1,7 +1,7 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
-DIST freenet-ext.jar 2452429 RMD160 fdac9646f7fbb5ee82ad62580191695cc6bef593 SHA1 712aaf061e5e35df47ab6727476b78a0cf8c47da SHA256 1ab33492054eb6e8550f608d3b7d6f3a5117b5905f342bfad8cb38a2a9350bf2
-DIST freenet-r16799-snapshot.jar 2309519 RMD160 7d0c5babebae2703c3369af73f94522d5ac3f58e SHA1 31fd31eb944acbca6ec1278f368f774483afa5ec SHA256 5285a8da6a4e0cbd48e40d7c50f34dc975b118551a148b738ead1728dd466ff2
+DIST freenet-ext.jar 2465628 RMD160 b2f428b9935c3fcb2fbfd38ef0b48a9ab8513f54 SHA1 49f4c21ef42d9b95ca2816bfa79f635e69b89bbb SHA256 caa5869e77b92bddd2416fdf8852d264fee9be49b1260281a7af4d36f8faf81f
+DIST freenet-r16868-snapshot.jar 2314364 RMD160 c1779270a3c213ddbe779243bbfc55cf8f86403c SHA1 b05ce30a1a76ac3ebf960b749d1e22ad5955c8af SHA256 ad15c7d7fdf0bacab8e6bcc7dd778404ebcebbd4092f2489f4aee3c138c4da6a
 DIST freenet07.tar.gz 380903 RMD160 216fc44016efa6a19291d74cb2a46cb005efbb86 SHA1 0d86e6516daeee9aec9b1a67eb06a3e8953ed3c6 SHA256 0c225694d4c3c81f62ac07fc5004196fbf7807b946dbed63740fdbc77f631513
-EBUILD freenet-bin-0.7.1096.ebuild 2310 RMD160 0a725ecf6e18263573a12fd0e8441aab4b77c07d SHA1 4577bff4f68ea8b90a39fe835c4166eff715b781 SHA256 2f3928875a79b2bb8356a39e112227160ae2d9e1a5829781f68b1280d2ab94c4
-MISC ChangeLog 4459 RMD160 4877b034155fbaba7f2b1c301d9ccebdc36d12ee SHA1 0733d766ece21c7536658bbcc4c96885a789db8b SHA256 7026114b716057cf21dad33900f453813151e453bceb98f7910bf2ca298d0dce
+EBUILD freenet-bin-0.7.1097.ebuild 2310 RMD160 2f1b5658172d8f28d1f857f1eb534284facb9420 SHA1 52fd21b6876aec9f637d164a35371b7d63b9b224 SHA256 7b5fd0fb77f3a39bad73fd90a19a63fda5d9cdc67cfe0999df8b333f2b5a0853
+MISC ChangeLog 4587 RMD160 8bab62387dd75ce9d98faf7b41e9e6582e0f142f SHA1 643a8b50133e133d967ccc300d09adc42e4c4dd9 SHA256 378db9608d35f7a76dde0d28c68ebb0502ea690faf2913350428e6c4b627e8af
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
