@@ -1,5 +1,5 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
-DIST freenet-sources-v1096.tar.bz2 19225416 RMD160 df2d841f3dc98d5b1e7003530994fcee1ce92bc0 SHA1 0bdb12c81454a142a51d109dd54ada52290baecc SHA256 b2d84620116b2358fddf2f2ffc9ba3d22f6f250d0e42c5fce7ddea7519d66ed3
-EBUILD freenet-0.7.1096.ebuild 2010 RMD160 2ccd80e41f430b2f42cc390d23eeeef0259d7fa6 SHA1 75c06e45a3a54b859355250bf5a7f56da2cc466a SHA256 8335bd31766d0ecb1cecd89a629dd952a65591c96ab124339001618f89c4b3de
-MISC ChangeLog 2860 RMD160 940c83504b02d76aa85c5afbe823f170f6a235c2 SHA1 f7d60416530fdd969b2208b8290eda4f7d87272c SHA256 7101941150e3e72ba64b13a52c1ed86f47d2240d25bc743fddd6c8d13a876e82
+DIST freenet-sources-v1097.tar.bz2 19229338 RMD160 dd3eef6af57dd038440dcdcd6c13db8b530ca66a SHA1 c9ae7501417e0d629f1ba2123b6283b02e57235a SHA256 b74611d705767c0806a118063fc5867776cf055f77fc797e8a7a716293bbbbaf
+EBUILD freenet-0.7.1097.ebuild 2010 RMD160 4c8e6be96fa25953dd371aefe36da97819739ca8 SHA1 d81aaab7d8c6ec3291648bb9656a3a03e0cf3e87 SHA256 0943b6e33f9d0b2a32b82e45d5407719d909207430e8cc981a02b308bb6b4c00
+MISC ChangeLog 2980 RMD160 ea341e53b1fc2e9bff74133a9e2b1d3ab492d242 SHA1 caf207d55403b9cb1e07cd7620decaed4b4503af SHA256 c7a0c70c70f20286066872a4aa04e2d4cdcb83f8caf2a4826978bd450fa0b7ea
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
