@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/freenet
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-0.7.1096.ebuild,
+  +freenet-0.7.1097.ebuild:
+  New upstream release
 
   23 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-0.7.1095.ebuild,
   +freenet-0.7.1096.ebuild:
